[gd_scene load_steps=10 format=3 uid="uid://diqdgucwrywt8"]

[ext_resource type="Script" path="res://scenes/singleplayer_menu.gd" id="1_11rys"]
[ext_resource type="FontFile" uid="uid://bidxbkni4uqjt" path="res://fonts/Aldrich-Regular.ttf" id="2_pxetp"]

[sub_resource type="LabelSettings" id="LabelSettings_wje06"]
font = ExtResource("2_pxetp")
font_size = 128
font_color = Color(0, 0, 0, 1)
outline_size = 10

[sub_resource type="LabelSettings" id="LabelSettings_5xs8p"]
font = ExtResource("2_pxetp")
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_cxt5t"]
font = ExtResource("2_pxetp")
font_size = 32

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_e5aij"]

[sub_resource type="LabelSettings" id="LabelSettings_3byly"]
font = ExtResource("2_pxetp")
font_size = 32

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_02dhf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1c1qb"]

[node name="SingleplayerMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_11rys")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2

[node name="TitleLabel" type="Label" parent="PanelContainer/Panel/VBoxContainer"]
layout_mode = 2
text = "JANKEN"
label_settings = SubResource("LabelSettings_wje06")
horizontal_alignment = 1
uppercase = true

[node name="SubtitleLabel" type="Label" parent="PanelContainer/Panel/VBoxContainer"]
layout_mode = 2
text = "SINGLEPLAYER"
label_settings = SubResource("LabelSettings_5xs8p")
horizontal_alignment = 1

[node name="ColorRect" type="ColorRect" parent="PanelContainer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(550, 2)
layout_mode = 2
size_flags_horizontal = 4

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer/Panel/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/Panel/VBoxContainer/CenterContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/Panel/VBoxContainer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 55)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/Panel/VBoxContainer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(550, 0)
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/Panel/VBoxContainer/CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "CHOOSE YOUR TEAM"
label_settings = SubResource("LabelSettings_cxt5t")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/Panel/VBoxContainer/CenterContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="TeamOptionsButton" type="OptionButton" parent="PanelContainer/Panel/VBoxContainer/CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_pxetp")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxEmpty_e5aij")
flat = true
alignment = 1

[node name="MarginContainer3" type="MarginContainer" parent="PanelContainer/Panel/VBoxContainer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/Panel/VBoxContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "TEAM MEMBER COUNT"
label_settings = SubResource("LabelSettings_3byly")
horizontal_alignment = 1

[node name="TeamMemberCountScroll" type="HScrollBar" parent="PanelContainer/Panel/VBoxContainer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
min_value = 1.0
max_value = 200.0
step = 1.0
value = 20.0
rounded = true

[node name="TeamMemberCountLineEdit" type="LineEdit" parent="PanelContainer/Panel/VBoxContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_pxetp")
theme_override_font_sizes/font_size = 32
text = "20"
placeholder_text = "?"
alignment = 1
flat = true

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer/Panel/VBoxContainer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 55)
layout_mode = 2

[node name="StartButton" type="Button" parent="PanelContainer/Panel/VBoxContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 1, 0, 1)
theme_override_fonts/font = ExtResource("2_pxetp")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxEmpty_02dhf")
text = "START GAME"
flat = true

[node name="BackButton" type="Button" parent="PanelContainer/Panel/VBoxContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 1, 0, 1)
theme_override_fonts/font = ExtResource("2_pxetp")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxEmpty_1c1qb")
text = "BACK"
flat = true

[connection signal="value_changed" from="PanelContainer/Panel/VBoxContainer/CenterContainer/VBoxContainer/TeamMemberCountScroll" to="." method="_on_team_member_count_scroll_value_changed"]
[connection signal="text_submitted" from="PanelContainer/Panel/VBoxContainer/CenterContainer/VBoxContainer/TeamMemberCountLineEdit" to="." method="_on_team_member_count_line_edit_text_submitted"]
[connection signal="pressed" from="PanelContainer/Panel/VBoxContainer/CenterContainer/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="PanelContainer/Panel/VBoxContainer/CenterContainer/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
